--- a/index.html
+++ b/index.html
@@ -1,17 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="ro">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BC Media Network</title>
-  <meta charset="UTF-8">
-  <style>
-    body { font-family: sans-serif; text-align: center; padding: 50px; background: #f4f4f4; }
-    h1 { color: #2c3e50; }
-    p { color: #555; }
-  </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>BC Media Network</h1>
-  <p>Promovăm afacerile locale din Bistrița!</p>
-  <p>Contact: bcmedia.network@gmail.com</p>
+
+  <!-- HERO SECTION CU VIDEO -->
+  <header class="hero">
+    <video autoplay muted loop class="background-video">
+      <source src="video-ta.mp4" type="video/mp4" />
+      Browserul tău nu suportă video.
+    </video>
+    <div class="overlay">
+      <h1>BC Media Network</h1>
+      <p>Promovăm afacerile din Bistrița cu energie tânără</p>
+    </div>
+  </header>
+
+  <!-- DESPRE NOI -->
+  <section class="about">
+    <div class="text">
+      <h2>Despre noi</h2>
+      <p>
+        Suntem o echipă de tineri pasionați din Bistrița, care ajută afacerile locale să se dezvolte prin promovare online, conținut vizual și strategie media.
+      </p>
+    </div>
+    <div class="image">
+      <img src="echipa.jpg" alt="Echipa BC Media Network">
+    </div>
+  </section>
+
 </body>
 </html>
